--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,15 @@ jobs:
     - name: Execute Gradle build
       run: ./gradlew build
 
+    - name: Login to DockerHub Registry
+      run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+    - name: Build the latest Docker image
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/vpn_keep_alive:latest
+
+    - name: Push the latest Docker image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/vpn_keep_alive:latest
+
     - name: Rename file
       run: mv ./app/build/libs/vpn_keep_alive.jar ./app/build/libs/vpn_keep_alive_${{ github.ref_name }}.jar
 
